# FATFS

./: CMakeLists.txt  README.md
src/: FAT.h
src/fat_info/: fat_info.cpp  fat_info.h  load_FAT.cpp
src/file_descriptor/: file_descriptor.c  file_descriptor.h  read.cpp
src/init/: init.c  init.h
src/lfn/: LFN.h  open_lfn.c  open_lfn.cpp  open_lfn.h  read_lfn_info.c  read_lfn_info.cpp  read_lfn_info.h
src/load_FAT/: load_FAT.c  load_FAT.h
src/open/: open.c  open.cpp  open.h
src/read/: read.c  read.cpp  read.h  read_sector.h
src/read_file_info/: read_file_info.c  read_file_info.cpp  read_file_info.h
src/structures/: structure.h  structure_.h
